<resources>
    <string name="app_name">Decorplant</string>
    <string name="welcome_text">Welcome to Decorplant!<br />Get a diagnosis to solve your decorated plant problem!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="home_page">Home Page</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="find_plant_name">Find Plant Name</string>
    <string name="forgot_your_password_capital">Forgot Your Password?</string>
    <string name="forgot_your_password_guide">Enter your registered email below to receive the reset password link</string>
    <string name="send">Send</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="diagnosis_image">Diagnosis image</string>
    <string name="find_plant_name_image">Find plant name image</string>
    <string name="diagnosis_history">Diagnosis History</string>
    <string name="diagnosis_history_image">Diagnosis history image</string>
    <string name="decorplant_logo">Decorplant Logo</string>
    <string name="email_image">email image</string>
    <string name="symtomps_example">This is the symtomps example</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="disease_name">Disease name</string>
    <string name="enter_name">Enter your name here</string>
    <string name="enter_email">Enter your email here</string>
    <string name="enter_password">Enter a password here</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="password_didnt_match">Those passwords didn’t match. Try again.</string>
    <string name="registration_successful">Registration successful, please verify your account through email</string>
    <string name="registration_failed">Registration failed</string>
    <string name="password_too_short">Enter password more or equal than 6 character</string>
    <string name="hide">Hide</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="please_verify_email">Please verify your email address</string>
    <string name="email_reset_pass_sent">Email reset password has been sent</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="failed_send_email">Failed to send the email</string>
    <string name="logout">Log Out</string>
    <string name="logout_dialog">Are you sure want to logout?</string>
    <string name="logout_cancelled">Logout cancelled</string>
    <string name="g1">Terdapat bercak yang berbentuk lingkaran dan bagian pusat bercak berwarna transparan dan bagian tepi berwarna coklat tua.</string>
    <string name="disease_solution_example">Cara Mengatasinya: <br />Labore sunt veniam amet est. Minim nisi dolor eu ad incididunt cillum elit ex ut. Dolore exercitation nulla tempor consequat aliquip occaecat. Nisi id ipsum irure aute. Deserunt sit aute irure quis nulla eu consequat fugiat Lorem sunt magna et consequat labore. Laboris incididunt id Lorem est duis deserunt nisi dolore eiusmod culpa exercitation consectetur.  consectetur tempor sunt dolore in sunt reprehenderit voluptate dolore adipisicing. Proident eiusmod reprehenderit quis sint exercitation voluptate non labore. Sunt non sint in Lorem occaecat dolore tempor ipsum et proident sit Lorem ipsum officia.</string>
    <string name="profile">Profile</string>
    <string name="profile_name_example">Profile Name Example</string>
    <string name="email_example">emailexample@email.com</string>
    <string name="history">History</string>
    <string name="history_name_disease_example">Name Disease</string>
    <string name="history_date_example">01/01/2001</string>
    <string name="history_result_image">History result image</string>
    <string name="find_plant_name_result_example">This is example result</string>
    <string name="plant_name">Plant name: </string>
    <string name="symptoms_result_dialog">Sorry, we cannot find the disease. Try again with different syntomps</string>
    <string name="my_plant">My Plant</string>
    <string name="my_plant_image">my plant image</string>
    <string name="history_is_empty">"Your diagnosis history will be recorded here.  "</string>
    <string name="result_image_fail">Result Failed Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="score">0.0</string>
    <string name="confidence_score">Confidence score:</string>
    <string name="plant_name_test">"Plant name result "</string>
</resources>