<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.ForgotPasswordActivity">

    <TextView
        android:id="@+id/tvForgotPasswordPageTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/forgot_your_password_capital"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordPageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="176dp"
            android:layout_height="117dp"
            android:src="@drawable/forgot_password"
            android:contentDescription="@string/email_image"
            android:layout_gravity="center_horizontal"/>
        
        <TextView
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginBottom="33dp"
            android:text="@string/forgot_your_password_guide"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="14sp"/>

        
        <EditText
            android:id="@+id/etEmailForgotPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/style_login_sign_up_edit_text"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendEmailForgotPassword"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/style_button"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llForgotPasswordToLogin"/>

    <LinearLayout
        android:id="@+id/llForgotPasswordToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/remember_your_password"
            android:textSize="16sp"
            android:textColor="@color/dark_green"/>

        <TextView
            android:id="@+id/tvForgotPasswordToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:textColor="@color/really_dark_green"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>