<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.FindPlantNameActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBackFindPlantName"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/stylee_back_button"
        android:src="@drawable/icon_arrow_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFindPlantNamePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/find_plant_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivFindPlantName"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        android:background="@color/grey"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/find_plant_name_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFindPlantNamePageTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ivFindPlantName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/plant_name"
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/tvFindPlantNameResultLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_name_test"
                android:textSize="21sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/confidence_score"
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/tvFindPlantNameResultScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="21sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/style_button"
        android:drawableStart="@drawable/ic_baseline_photo_camera_24"
        android:drawablePadding="6dp"
        android:paddingHorizontal="18dp"
        android:text="@string/take_photo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOpenGallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpenGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/style_button"
        android:drawableStart="@drawable/ic_baseline_photo_24"
        android:drawablePadding="6dp"
        android:paddingHorizontal="18dp"
        android:text="@string/open_gallery"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTakePhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>