<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.SignUpActivity">

    <TextView
        android:id="@+id/tvSignUpPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUpPageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <EditText
            android:id="@+id/etNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="22dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/name"
            android:background="@drawable/style_login_sign_up_edit_text"/>

        <EditText
            android:id="@+id/etEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="22dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/style_login_sign_up_edit_text"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/style_login_sign_up_edit_text">

            <EditText
                android:id="@+id/etPasswordSignUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/style_login_sign_up_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvShowPasswordSignUp"/>

            <TextView
                android:id="@+id/tvShowPasswordSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/show"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/etConfirmPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:background="@drawable/style_login_sign_up_edit_text"/>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/style_button"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUpToForgotPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSignUpToForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/really_dark_green"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/llSignUpToSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/llSignUpToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/already_have_account"
            android:textSize="16sp"
            android:textColor="@color/dark_green"/>

        <TextView
            android:id="@+id/tvSignUpToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:textColor="@color/really_dark_green"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbSignUp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>