<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.ResultHistoryActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBackResultHistory"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/stylee_back_button"
        android:src="@drawable/icon_arrow_back_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvResultHistoryPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/result"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="28dp"
        android:layout_marginTop="21dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvResultHistoryPageTitle">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvResultHistoryImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="18dp"
            app:layout_constraintTop_toBottomOf="@+id/tvResultHistoryPageTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ivResultHistoryImage"
                android:layout_width="340dp"
                android:layout_height="180dp"
                android:background="@color/grey"
                android:src="@drawable/icon_result_test"
                android:contentDescription="@string/history_result_image"/>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

            <TextView
                android:id="@+id/tvResultHistoryDiseaseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/disease_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHistoryResultDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/history_date_example"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvResultHistoryDiseaseSolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/disease_solution_example"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>